Barely statred on an intro to the project plan.

--- a/plan/project-plan.tex
+++ b/plan/project-plan.tex
@@ -41,7 +41,7 @@ english, swedish %% Make sure to put the main language last!
 
 
 %%%%%%%%%%%%%%%%%%%% vvv Internal title page vvv %%%%%%%%%%%%%%%%%%%%%
-\begin{titlepage}
+%\begin{titlepage}
 \title{Project plan -- project lambda}
 \author{Nilkas Renström \and Andréas Sundström}
 \date{\today}
@@ -57,7 +57,7 @@ english, swedish %% Make sure to put the main language last!
 % \end{abstract}
 % \newpage
 %\tableofcontents
-\end{titlepage}
+%\end{titlepage}
 
 
 %%%%%%%%%%%%%%%%%%%% ^^^ Internal title page ^^^ %%%%%%%%%%%%%%%%%%%%%
@@ -66,7 +66,17 @@ english, swedish %% Make sure to put the main language last!
 
 
 
-\section{}
+\section{Introduction}
+\todo[inline]{General intro to hyopthermia and freq dep.}
+
+This project will study the study the efficacy of
+ultra-wideband (UWB) treatmants in comparison to narrowband (NB).
+Previously, such comparisons have been conducted using numerical or
+experimantal methods. In this project we intend to
+investigate this subject from a more theoretical and mathematical
+stand point. 
+
+
 
 
 \subsection{}
