--- a/plan/project-plan.tex
+++ b/plan/project-plan.tex
@@ -42,7 +42,7 @@ english, swedish %% Make sure to put the main language last!
 
 %%%%%%%%%%%%%%%%%%%% vvv Internal title page vvv %%%%%%%%%%%%%%%%%%%%%
 %\begin{titlepage}
-\title{Project plan -- project lambda}
+\title{Project plan -- \texttt{project lambda}}
 \author{Nilkas Renström \and Andréas Sundström}
 \date{\today}
 
@@ -76,11 +76,31 @@ experimantal methods. In this project we intend to
 investigate this subject from a more theoretical and mathematical
 stand point. 
 
+Where as prior studies have found indications that an UWB approach
+does not significantly improve performance. This project aims to find 
+theoretical grounds for this claim. 
 
 
+\section{Method}
 
-\subsection{}
 
+\begin{enumerate}
+\item Heisenberg: What is it exactly and how does it affect UWB vs NB?
+- Implementation with EM-waves.
+\item Investigate focusing effect of head geometry. -Explanation to
+why some specific frequency is the best.
+\item Solve details regarding frequency components and interference
+(Fourier) and the step to amplitudes. 
+\end{enumerate}
+\todo{clarify}
+
+\section{Time allocation}
+Finish this!
+
+Our plan is to finish points 1 and 2 on the 16th. Point 3 is more
+vague, and no final time plan can be set up. 
+
+\section{Continuation}
 
 
 
